# calligraphy

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  calligraphy.cabal  flake.nix  hie.yaml  spaghetti.cabal  stack-lts19.yaml  stack-nightly.yaml  test.sh
.github/workflows/: CI.yaml
app/: Main.hs
js/: main.css  main.js  treegraph.js
src/: Calligraphy.hs  Collapse.hs  Compat.hs  Config.hs  Debug.hs  Dummy.hs  EdgeFilter.hs  Filter.hs  GraphViz.hs  LexTree.hs  Lib.hs  Parse.hs  Pattern.hs  Prelude.hs  Printer.hs  STree.hs  Search.hs  Spaghetti.hs
src/Calligraphy/: Prelude.hs
src/Calligraphy/Compat/: Debug.hs  GHC.hs  Lib.hs
src/Calligraphy/Phases/: Collapse.hs  DependencyFilter.hs  EdgeCleanup.hs  EdgeFilter.hs  Filter.hs  NodeFilter.hs  Parse.hs  Render.hs  Search.hs
src/Calligraphy/Phases/Render/: Common.hs  GraphViz.hs  Mermaid.hs
src/Calligraphy/Util/: Compat.hs  Debug.hs  Lens.hs  LexTree.hs  Optparse.hs  Printer.hs  Types.hs
test/: Spec.hs
test/Test/: LexTree.hs  Reference.dot  Reference.hs  STree.hs
