cabal-version:   2.4
name:            calligraphy
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/calligraphy#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/calligraphy

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fwrite-ide-info

library
  import:          common-options
  hs-source-dirs:  src
  other-modules:   Paths_calligraphy
  autogen-modules: Paths_calligraphy
  exposed-modules:
    Calligraphy
    Collapse
    Compat
    Debug
    Dummy
    EdgeFilter
    Filter
    GraphViz
    Parse
    Printer
    Search
    STree

  build-depends:
    , array
    , containers
    , directory
    , enummapset
    , filepath
    , ghc
    , hashable
    , microlens-platform
    , mtl
    , optparse-applicative
    , process
    , regex-tdfa
    , text
    , transformers

executable calligraphy
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  calligraphy
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite calligraphy-test
  import:         common-options
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  Test.STree
  build-depends:
    , calligraphy
    , hspec
    , HUnit
    , QuickCheck

  type:           exitcode-stdio-1.0
